@@ -1,35 +1,35 @@
 
 <!-- Page 1 -->
 <a name="1"></a>
-<DIV style="position:relative;width:1191;height:892;">
+<DIV style="position:relative;width:794;height:595;">
 <STYLE type="text/css">
 <!--
-	.ft0{font-size:19px;font-family:Times;color:#000000;}
-	.ft1{font-size:64px;font-family:Times;color:#000000;}
-	.ft2{font-size:46px;font-family:Times;color:#000000;}
+	.ft0{font-size:12px;font-family:Times;color:#000000;}
+	.ft1{font-size:42px;font-family:Times;color:#000000;}
+	.ft2{font-size:30px;font-family:Times;color:#000000;}
 -->
 </STYLE>
 <IMG width="1191" height="892" src="unknown001.png" alt="background image">
-<DIV style="position:absolute;top:813px;left:60px"><nobr><span class="ft0"> </span></nobr></DIV>
-<DIV style="position:absolute;top:813px;left:593px"><nobr><span class="ft0"> </span></nobr></DIV>
-<DIV style="position:absolute;top:73px;left:494px"><nobr><span class="ft1">Slide 1</span></nobr></DIV>
+<DIV style="position:absolute;top:542px;left:60px"><nobr><span class="ft0"> </span></nobr></DIV>
+<DIV style="position:absolute;top:542px;left:593px"><nobr><span class="ft0"> </span></nobr></DIV>
+<DIV style="position:absolute;top:73px;left:494px"><nobr><span class="ft1">Slide&nbsp;1</span></nobr></DIV>
 <DIV style="position:absolute;top:477px;left:557px"><nobr><span class="ft2">text</span></nobr></DIV>
 </DIV>
 <!-- Page 2 -->
 <a name="2"></a>
-<DIV style="position:relative;width:1191;height:892;">
+<DIV style="position:relative;width:794;height:595;">
 <STYLE type="text/css">
 <!--
 -->
 </STYLE>
-<IMG width="1191" height="892" src="unknown002.png" alt="background image">
+<IMG width="794" height="595" src="unknown002.png" alt="background image">
 <DIV style="position:absolute;top:813px;left:60px"><nobr><span class="ft0"> </span></nobr></DIV>
 <DIV style="position:absolute;top:813px;left:593px"><nobr><span class="ft0"> </span></nobr></DIV>
-<DIV style="position:absolute;top:73px;left:494px"><nobr><span class="ft1">Slide 2</span></nobr></DIV>
+<DIV style="position:absolute;top:73px;left:494px"><nobr><span class="ft1">Slide&nbsp;2</span></nobr></DIV>
 <DIV style="position:absolute;top:225px;left:72px"><nobr><span class="ft0"></span></nobr></DIV>
-<DIV style="position:absolute;top:209px;left:111px"><nobr><span class="ft2">first point</span></nobr></DIV>
+<DIV style="position:absolute;top:209px;left:111px"><nobr><span class="ft2">first&nbsp;point</span></nobr></DIV>
 <DIV style="position:absolute;top:300px;left:72px"><nobr><span class="ft0"></span></nobr></DIV>
-<DIV style="position:absolute;top:284px;left:111px"><nobr><span class="ft2">second one</span></nobr></DIV>
+<DIV style="position:absolute;top:284px;left:111px"><nobr><span class="ft2">second&nbsp;one</span></nobr></DIV>
 <DIV style="position:absolute;top:375px;left:72px"><nobr><span class="ft0"></span></nobr></DIV>
-<DIV style="position:absolute;top:359px;left:111px"><nobr><span class="ft2">picture below</span></nobr></DIV>
+<DIV style="position:absolute;top:359px;left:111px"><nobr><span class="ft2">picture&nbsp;below</span></nobr></DIV>
 </DIV>
